@@ -28,6 +28,8 @@ Changes to Version 2.0-0
 
   o Updated translations: Romanian (thanks to Adrian Dusa), Russian (thanks to Alexey Shipunov), Spanish (thanks to Manuel Munoz-Marquez).
 
+  o Show menu item for English introductory manual even if a "translation" is available (suggestion of Manuel Munoz-Marquez).
+
 Changes to Version 1.9-5
 
   o R logo now replaces Tk logo on non-Windows as well as Windows platforms (with help of Milan Bouchet-Valet).
